--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,9 @@ buildscript {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$springBootVersion"
         classpath "io.spring.gradle:dependency-management-plugin:1.0.8.RELEASE"
         classpath "org.jetbrains.kotlin:kotlin-noarg:$kotlin_version"
+        classpath "se.transmode.gradle:gradle-docker:1.2"
     }
+
 }
 
 subprojects {
@@ -22,12 +24,13 @@ subprojects {
         logbackVersion = '6.4'
         javaxValidatorVersion = '2.0.0.Final'
         reactorKotlinExtensionsVersion = '1.0.2.RELEASE'
+        restAssuredVersion = '4.2.0'
     }
 
     apply plugin: 'kotlin'
     apply plugin: 'java'
-    apply plugin: 'kotlin-kapt'
     apply plugin: "kotlin-jpa"
+    apply plugin: 'docker'
 
     sourceCompatibility = JavaVersion.VERSION_11
     targetCompatibility = JavaVersion.VERSION_11
@@ -49,6 +52,7 @@ subprojects {
             jvmTarget = "11"
         }
     }
+
     dependencies {
         compile "org.jetbrains.kotlin:kotlin-stdlib"
         compile "org.jetbrains.kotlin:kotlin-reflect"
