--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,3 +9,10 @@ services:
       POSTGRES_PASSWORD: test
       POSTGRES_USER: test
       POSTGRES_DB: testdb
+#  sentence-generator:
+#    image: sentence-generator:latest
+#    ports:
+#      - "7070:7070"
+#    restart: on-failure
+#    depends_on:
+#      - postgres
