--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,22 +1,41 @@
 apply plugin: 'io.spring.dependency-management'
 apply plugin: 'org.springframework.boot'
 apply plugin: "kotlin-spring"
+apply plugin: 'docker'
 
-bootJar.enabled = false
-jar.enabled = true
+bootJar {
+  enabled = false
+}
+jar {
+  enabled = true
+}
+
+task docker(type: Docker, dependsOn: build) {
+  push = true
+  applicationName = bootJar.archiveBaseName
+  dockerfile = file('Dockerfile')
+  doFirst {
+    copy {
+      from jar
+      into stageDir
+    }
+  }
+}
 
 dependencies {
-  compile("org.springframework.boot:spring-boot-starter-data-jpa")
-  compile("org.springframework.boot:spring-boot-starter-webflux")
-  compile("com.fasterxml.jackson.module:jackson-module-kotlin")
-  compile("io.projectreactor.kotlin:reactor-kotlin-extensions")
-  compile("org.jetbrains.kotlin:kotlin-reflect")
-  compile("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
-  compile("org.postgresql:postgresql")
-  compile("org.flywaydb:flyway-core")
-  compile("net.logstash.logback:logstash-logback-encoder:$logbackVersion")
-  compile("javax.validation:validation-api:$javaxValidatorVersion")
-  compile("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
-  testCompile("org.springframework.boot:spring-boot-starter-test")
-  testCompile("io.projectreactor:reactor-test")
+  implementation("org.springframework.boot:spring-boot-starter-data-jpa")
+  implementation("org.springframework.boot:spring-boot-starter-webflux")
+  implementation("com.fasterxml.jackson.module:jackson-module-kotlin")
+  implementation("io.projectreactor.kotlin:reactor-kotlin-extensions")
+  implementation("org.jetbrains.kotlin:kotlin-reflect")
+  implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+  implementation("org.postgresql:postgresql")
+  implementation("org.flywaydb:flyway-core")
+  implementation("net.logstash.logback:logstash-logback-encoder:$logbackVersion")
+  implementation("javax.validation:validation-api:$javaxValidatorVersion")
+  implementation("org.jetbrains.kotlinx:kotlinx-coroutines-reactor")
+  testImplementation("org.springframework.boot:spring-boot-starter-test")
+  testImplementation("io.projectreactor:reactor-test")
+  testImplementation("io.mockk:mockk:1.10.2")
+  testImplementation("org.hamcrest:hamcrest:2.2")
 }
